// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateTree updates a tree correctly if the amount, prices or craft flags changed 1`] = `
Object {
  "buyPrice": 50,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 210,
      "buyPriceEach": 42,
      "components": undefined,
      "craft": false,
      "craftDecisionPrice": 210,
      "craftResultPrice": 210,
      "daily_purchase_cap": 0,
      "decisionPrice": 210,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
      "weekly_purchase_cap": 0,
    },
    Object {
      "buyPrice": 250,
      "buyPriceEach": 10,
      "components": Array [
        Object {
          "buyPrice": 500,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 500,
          "craftResultPrice": 500,
          "daily_purchase_cap": 0,
          "decisionPrice": 500,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 2,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
          "weekly_purchase_cap": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 500,
      "craftPrice": 500,
      "craftResultPrice": 500,
      "daily_purchase_cap": 0,
      "decisionPrice": 500,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 25,
      "type": "Recipe",
      "usedQuantity": 25,
      "weekly_purchase_cap": 0,
    },
    Object {
      "buyPrice": 25000,
      "buyPriceEach": 1000,
      "components": Array [
        Object {
          "buyPrice": 550,
          "buyPriceEach": 11,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 550,
          "craftResultPrice": 550,
          "daily_purchase_cap": 0,
          "decisionPrice": 550,
          "disciplines": Array [],
          "id": 6,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 2,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
          "weekly_purchase_cap": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 550,
      "craftPrice": 550,
      "craftResultPrice": 550,
      "daily_purchase_cap": 0,
      "decisionPrice": 550,
      "disciplines": Array [],
      "id": 5,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 25,
      "type": "Recipe",
      "usedQuantity": 25,
      "weekly_purchase_cap": 0,
    },
  ],
  "craft": true,
  "craftDecisionPrice": 1260,
  "craftPrice": 1260,
  "craftResultPrice": 1260,
  "daily_purchase_cap": 0,
  "decisionPrice": 1260,
  "disciplines": Array [
    "Chef",
  ],
  "id": 1,
  "min_rating": 123,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [],
  "quantity": 1,
  "totalQuantity": 5,
  "type": "Recipe",
  "usedQuantity": 5,
  "weekly_purchase_cap": 0,
}
`;

exports[`updateTree updates a tree correctly if the available items changed 1`] = `
Object {
  "buyPrice": 50,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 0,
      "buyPriceEach": 42,
      "components": undefined,
      "craft": false,
      "craftDecisionPrice": 0,
      "craftResultPrice": 0,
      "daily_purchase_cap": 0,
      "decisionPrice": 0,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 0,
      "weekly_purchase_cap": 0,
    },
    Object {
      "buyPrice": 250,
      "buyPriceEach": 10,
      "components": Array [
        Object {
          "buyPrice": 500,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 500,
          "craftResultPrice": 500,
          "daily_purchase_cap": 0,
          "decisionPrice": 500,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 2,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
          "weekly_purchase_cap": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 500,
      "craftPrice": 500,
      "craftResultPrice": 500,
      "daily_purchase_cap": 0,
      "decisionPrice": 500,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 25,
      "type": "Recipe",
      "usedQuantity": 25,
      "weekly_purchase_cap": 0,
    },
    Object {
      "buyPrice": 25000,
      "buyPriceEach": 1000,
      "components": Array [
        Object {
          "buyPrice": 550,
          "buyPriceEach": 11,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 550,
          "craftResultPrice": 550,
          "daily_purchase_cap": 0,
          "decisionPrice": 550,
          "disciplines": Array [],
          "id": 6,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 2,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
          "weekly_purchase_cap": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 550,
      "craftPrice": 550,
      "craftResultPrice": 550,
      "daily_purchase_cap": 0,
      "decisionPrice": 550,
      "disciplines": Array [],
      "id": 5,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 25,
      "type": "Recipe",
      "usedQuantity": 25,
      "weekly_purchase_cap": 0,
    },
  ],
  "craft": true,
  "craftDecisionPrice": 1050,
  "craftPrice": 1050,
  "craftResultPrice": 1050,
  "daily_purchase_cap": 0,
  "decisionPrice": 1050,
  "disciplines": Array [
    "Chef",
  ],
  "id": 1,
  "min_rating": 123,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [],
  "quantity": 1,
  "totalQuantity": 5,
  "type": "Recipe",
  "usedQuantity": 5,
  "weekly_purchase_cap": 0,
}
`;
